#:schema https://json.schemastore.org/cargo.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
default-members = ["crates/*"]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
authors = [
	"Mateusz Kadlubowski <xeho91@pm.me>",
	"Vincent Chapuis <vincent.professional@chapuis.ovh>",
]
documentation = "https://docs.rs/polished-css"
edition = "2021"
homepage = "https://github.com/rust-cleaners"
license-file = "LICENSE.md"
readme = "README.md"
publish = true
repository = "https://github.com/rust-cleaners/polished-css"
version = "0.1.0"

strum = { version = "0.25.0", default-features = false }
strum_macros = { version = "0.25.3", default-features = false }
