#:schema https://json.schemastore.org/cargo.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
publish = false

name = "example-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
polished-css = { path = "../../crates/polished-css", features = [
	"atomic",
	"yew",
] }

gloo = { version = "0.10.0" }
log = { version = "0.4.20" }
strum = { version = "0.25.0" }
strum_macros = { version = "0.25.2" }
yew = { version = "0.21.0", features = ["csr"] }
yewdux = { version = "0.9.4" }
wasm-logger = { version = "0.2.0" }

[patch.crates-io]
yewdux = { git = "https://github.com/intendednull/yewdux.git", tag = "v0.9.4" }
